# CG_Project

./: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  README.md  Shader.h  Skymap.cpp  Skymap.h  Terrain.cpp  Terrain.h  TextureStore.cpp  TextureStore.h  glassFragmentShader.frag  glassVertexShader.vs  main.cpp  simpleFragmentShader.frag  simpleVertexShader.vs
res/: WMobj.dae  cube.dae  sphere.dae
shaders/: lightFragmentShader.frag  lightVertexShader.vs  simpleFragmentShader.frag  simpleVertexShader.vs  skymapFragmentShader.frag  skymapVertexShader.vs  waterFragmentShader.frag  waterVertexShader.vs
stb_image/: stb_image.h
